--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -257,6 +257,7 @@ add_library(bitcoin_node STATIC EXCLUDE_FROM_ALL
   policy/fees.cpp
   policy/fees_args.cpp
   policy/fee_estimator.cpp
+  policy/forecasters/mempool.cpp
   policy/packages.cpp
   policy/rbf.cpp
   policy/settings.cpp
