--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -194,11 +194,11 @@ compute_credits_template: &CREDITS_TEMPLATE
 
 task:
   name: 'no wallet, libbitcoinkernel'
-  << : *GLOBAL_TASK_TEMPLATE
+  <<: *GLOBAL_TASK_TEMPLATE
   persistent_worker:
     isolation:
       vetu:
-        image: ubuntu:noble
+        image: ghcr.io/cirruslabs/ubuntu-runner-amd64:22.04
         user: admin
         password: admin
     labels:
