ci: specify task resources

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -76,6 +76,37 @@ base_template: &BASE_TEMPLATE
     - git checkout FETCH_HEAD  # Use merged changes to detect silent merge conflicts
                                # Also, the merge commit is used to lint COMMIT_RANGE="HEAD~..HEAD"
 
+worker_template: &WORKER_TEMPLATE
+  persistent_worker:
+    isolation:
+      vetu:
+        image: ghcr.io/cirruslabs/ubuntu-runner-amd64:22.04
+        user: admin
+        password: admin
+        disk_size: 50
+
+small_worker_template: &SMALL_WORKER_TEMPLATE
+  << : *WORKER_TEMPLATE
+  persistent_worker:
+    isolation:
+      vetu:
+        cpu: 2
+        memory: 8G
+    resources:
+      cpu: 2
+      memory: 8
+
+medium_worker_template: &MEDIUM_WORKER_TEMPLATE
+  << : *WORKER_TEMPLATE
+  persistent_worker:
+    isolation:
+      vetu:
+        cpu: 4
+        memory: 16G
+    resources:
+      cpu: 4
+      memory: 16
+
 main_template: &MAIN_TEMPLATE
   timeout_in: 120m  # https://cirrus-ci.org/faq/#instance-timed-out
   ci_script:
@@ -110,108 +141,82 @@ compute_credits_template: &CREDITS_TEMPLATE
 #   lint_script:
 #     - ./ci/lint_run_all.sh
 #
-# task:
-#   name: 'tidy'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: medium
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_native_tidy.sh"
-#
-# task:
-#   name: 'ARM, unit tests, no functional tests'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: arm64  # Use arm64 worker to sidestep qemu and avoid a slow CI: https://github.com/bitcoin/bitcoin/pull/28087#issuecomment-1649399453
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_arm.sh"
-#
-# task:
-#   name: 'Win64, unit tests, no gui tests, no functional tests'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: small
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_win64.sh"
-#
-# task:
-#   name: '32-bit CentOS, dash, gui'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: small
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_i686_centos.sh"
-#
-# task:
-#   name: 'previous releases, depends DEBUG'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: small
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_native_previous_releases.sh"
-#
-# task:
-#   name: 'TSan, depends, gui'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: medium
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_native_tsan.sh"
-#
-# task:
-#   name: 'MSan, depends'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: small
-#   timeout_in: 300m  # Use longer timeout for the *rare* case where a full build (llvm + msan + depends + ...) needs to be done.
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_native_msan.sh"
-#
-# task:
-#   name: 'fuzzer,address,undefined,integer, no depends'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: medium
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_native_fuzz.sh"
-#
-# task:
-#   name: 'multiprocess, i686, DEBUG'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: medium
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_i686_multiprocess.sh"
+task:
+  name: 'tidy'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *MEDIUM_WORKER_TEMPLATE
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_native_tidy.sh"
+
+task:
+  name: 'ARM, unit tests, no functional tests'
+  << : *GLOBAL_TASK_TEMPLATE
+  persistent_worker:
+    labels:
+      type: arm64  # Use arm64 worker to sidestep qemu and avoid a slow CI: https://github.com/bitcoin/bitcoin/pull/28087#issuecomment-1649399453
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_arm.sh"
+
+task:
+  name: 'Win64, unit tests, no gui tests, no functional tests'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *SMALL_WORKER_TEMPLATE
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_win64.sh"
+
+task:
+  name: '32-bit CentOS, dash, gui'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *SMALL_WORKER_TEMPLATE
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_i686_centos.sh"
+
+task:
+  name: 'previous releases, depends DEBUG'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *SMALL_WORKER_TEMPLATE
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_native_previous_releases.sh"
+
+task:
+  name: 'TSan, depends, gui'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *MEDIUM_WORKER_TEMPLATE
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_native_tsan.sh"
+
+task:
+  name: 'MSan, depends'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *SMALL_WORKER_TEMPLATE
+  timeout_in: 300m  # Use longer timeout for the *rare* case where a full build (llvm + msan + depends + ...) needs to be done.
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_native_msan.sh"
+
+task:
+  name: 'fuzzer,address,undefined,integer, no depends'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *MEDIUM_WORKER_TEMPLATE
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_native_fuzz.sh"
+
+task:
+  name: 'multiprocess, i686, DEBUG'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *MEDIUM_WORKER_TEMPLATE
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_i686_multiprocess.sh"
 
 task:
   name: 'no wallet, libbitcoinkernel'
   << : *GLOBAL_TASK_TEMPLATE
-  persistent_worker:
-    isolation:
-      vetu:
-        image: ghcr.io/cirruslabs/ubuntu-runner-amd64:22.04
-        user: admin
-        password: admin
-    labels:
-      arch: "amd64"
-
+  << : *MEDIUM_WORKER_TEMPLATE
   env:
     FILE_ENV: "./ci/test/00_setup_env_native_nowallet_libbitcoinkernel.sh"
 
-# task:
-#   name: 'macOS-cross, gui, no tests'
-#   << : *GLOBAL_TASK_TEMPLATE
-#   persistent_worker:
-#     labels:
-#       type: small
-#   env:
-#     FILE_ENV: "./ci/test/00_setup_env_mac_cross.sh"
+task:
+  name: 'macOS-cross, gui, no tests'
+  << : *GLOBAL_TASK_TEMPLATE
+  << : *SMALL_WORKER_TEMPLATE
+  env:
+    FILE_ENV: "./ci/test/00_setup_env_mac_cross.sh"
