--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,6 +4,7 @@ env:  # Global defaults
   MAKEJOBS: "-j10"
   TEST_RUNNER_PORT_MIN: "14000"  # Must be larger than 12321, which is used for the http cache. See https://cirrus-ci.org/guide/writing-tasks/#http-cache
   CI_FAILFAST_TEST_LEAVE_DANGLING: "1"  # Cirrus CI does not care about dangling processes and setting this variable avoids killing the CI script itself on error
+  CCACHE_REMOTE_STORAGE: "http://10.0.0.1:80/cache/"
 
 # A self-hosted machine(s) can be used via Cirrus CI. It can be configured with
 # multiple users to run tasks in parallel. No sudo permission is required.
@@ -84,6 +85,7 @@ worker_template: &WORKER_TEMPLATE
         user: admin
         password: admin
         disk_size: 50
+        bridgedInterface: br-vetu
 
 small_worker_template: &SMALL_WORKER_TEMPLATE
   << : *WORKER_TEMPLATE
