--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -317,8 +317,8 @@ jobs:
 
       - name: Install git
         run: |
-          apt-get update
-          apt-get install -y git
+          sudo apt-get update
+          sudo apt-get install -y git
 
       - name: Setup test runner cache
         uses: buildjet/cache@v4
