disable runs on branch push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ on:
   pull_request:
   # See: https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#push.
   push:
-    branches:
-      - '**'
+    # branches:
+    #   - '**'
     tags-ignore:
       - '**'
 
