--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,58 +22,58 @@ env:
   MAKEJOBS: '-j10'
 
 jobs:
-  test-each-commit:
-    name: 'test each commit'
-    runs-on: ${{ github.repository == 'willcl-ark/bitcoin' && 'buildjet-4vcpu-ubuntu-2204' || 'ubuntu-24.04' }}
-    if: github.event_name == 'pull_request' && github.event.pull_request.commits != 1
-    timeout-minutes: 360  # Use maximum time, see https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idtimeout-minutes. Assuming a worst case time of 1 hour per commit, this leads to a --max-count=6 below.
-    env:
-      MAX_COUNT: 6
-    steps:
-      - name: Determine fetch depth
-        run: echo "FETCH_DEPTH=$((${{ github.event.pull_request.commits }} + 2))" >> "$GITHUB_ENV"
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: ${{ env.FETCH_DEPTH }}
-      - name: Determine commit range
-        run: |
-          # Checkout HEAD~ and find the test base commit
-          # Checkout HEAD~ because it would be wasteful to rerun tests on the PR
-          # head commit that are already run by other jobs.
-          git checkout HEAD~
-          # Figure out test base commit by listing ancestors of HEAD, excluding
-          # ancestors of the most recent merge commit, limiting the list to the
-          # newest MAX_COUNT ancestors, ordering it from oldest to newest, and
-          # taking the first one.
-          #
-          # If the branch contains up to MAX_COUNT ancestor commits after the
-          # most recent merge commit, all of those commits will be tested. If it
-          # contains more, only the most recent MAX_COUNT commits will be
-          # tested.
-          #
-          # In the command below, the ^@ suffix is used to refer to all parents
-          # of the merge commit as described in:
-          # https://git-scm.com/docs/git-rev-parse#_other_rev_parent_shorthand_notations
-          # and the ^ prefix is used to exclude these parents and all their
-          # ancestors from the rev-list output as described in:
-          # https://git-scm.com/docs/git-rev-list
-          MERGE_BASE=$(git rev-list -n1 --merges HEAD)
-          EXCLUDE_MERGE_BASE_ANCESTORS=
-          # MERGE_BASE can be empty due to limited fetch-depth
-          if test -n "$MERGE_BASE"; then
-            EXCLUDE_MERGE_BASE_ANCESTORS=^${MERGE_BASE}^@
-          fi
-          echo "TEST_BASE=$(git rev-list -n$((${{ env.MAX_COUNT }} + 1)) --reverse HEAD $EXCLUDE_MERGE_BASE_ANCESTORS | head -1)" >> "$GITHUB_ENV"
-      - run: |
-          sudo apt-get update
-          sudo apt-get install clang ccache build-essential cmake pkgconf python3-zmq libevent-dev libboost-dev libsqlite3-dev libdb++-dev systemtap-sdt-dev libzmq3-dev qtbase5-dev qttools5-dev qttools5-dev-tools qtwayland5 libqrencode-dev -y
-      - name: Compile and run tests
-        run: |
-          # Run tests on commits after the last merge commit and before the PR head commit
-          # Use clang++, because it is a bit faster and uses less memory than g++
-          git rebase --exec "echo Running test-one-commit on \$( git log -1 ) && CC=clang CXX=clang++ cmake -B build -DWERROR=ON -DWITH_ZMQ=ON -DBUILD_GUI=ON -DBUILD_BENCH=ON -DBUILD_FUZZ_BINARY=ON -DWITH_BDB=ON -DWITH_USDT=ON -DCMAKE_CXX_FLAGS='-Wno-error=unused-member-function' && cmake --build build -j $(nproc) && ctest --output-on-failure --stop-on-failure --test-dir build -j $(nproc) && ./build/test/functional/test_runner.py -j $(( $(nproc) * 2 )) --combinedlogslen=99999999" ${{ env.TEST_BASE }}
-
+  # test-each-commit:
+  #   name: 'test each commit'
+  #   runs-on: ${{ github.repository == 'willcl-ark/bitcoin' && 'buildjet-4vcpu-ubuntu-2204' || 'ubuntu-24.04' }}
+  #   if: github.event_name == 'pull_request' && github.event.pull_request.commits != 1
+  #   timeout-minutes: 360  # Use maximum time, see https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idtimeout-minutes. Assuming a worst case time of 1 hour per commit, this leads to a --max-count=6 below.
+  #   env:
+  #     MAX_COUNT: 6
+  #   steps:
+  #     - name: Determine fetch depth
+  #       run: echo "FETCH_DEPTH=$((${{ github.event.pull_request.commits }} + 2))" >> "$GITHUB_ENV"
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         ref: ${{ github.event.pull_request.head.sha }}
+  #         fetch-depth: ${{ env.FETCH_DEPTH }}
+  #     - name: Determine commit range
+  #       run: |
+  #         # Checkout HEAD~ and find the test base commit
+  #         # Checkout HEAD~ because it would be wasteful to rerun tests on the PR
+  #         # head commit that are already run by other jobs.
+  #         git checkout HEAD~
+  #         # Figure out test base commit by listing ancestors of HEAD, excluding
+  #         # ancestors of the most recent merge commit, limiting the list to the
+  #         # newest MAX_COUNT ancestors, ordering it from oldest to newest, and
+  #         # taking the first one.
+  #         #
+  #         # If the branch contains up to MAX_COUNT ancestor commits after the
+  #         # most recent merge commit, all of those commits will be tested. If it
+  #         # contains more, only the most recent MAX_COUNT commits will be
+  #         # tested.
+  #         #
+  #         # In the command below, the ^@ suffix is used to refer to all parents
+  #         # of the merge commit as described in:
+  #         # https://git-scm.com/docs/git-rev-parse#_other_rev_parent_shorthand_notations
+  #         # and the ^ prefix is used to exclude these parents and all their
+  #         # ancestors from the rev-list output as described in:
+  #         # https://git-scm.com/docs/git-rev-list
+  #         MERGE_BASE=$(git rev-list -n1 --merges HEAD)
+  #         EXCLUDE_MERGE_BASE_ANCESTORS=
+  #         # MERGE_BASE can be empty due to limited fetch-depth
+  #         if test -n "$MERGE_BASE"; then
+  #           EXCLUDE_MERGE_BASE_ANCESTORS=^${MERGE_BASE}^@
+  #         fi
+  #         echo "TEST_BASE=$(git rev-list -n$((${{ env.MAX_COUNT }} + 1)) --reverse HEAD $EXCLUDE_MERGE_BASE_ANCESTORS | head -1)" >> "$GITHUB_ENV"
+  #     - run: |
+  #         sudo apt-get update
+  #         sudo apt-get install clang ccache build-essential cmake pkgconf python3-zmq libevent-dev libboost-dev libsqlite3-dev libdb++-dev systemtap-sdt-dev libzmq3-dev qtbase5-dev qttools5-dev qttools5-dev-tools qtwayland5 libqrencode-dev -y
+  #     - name: Compile and run tests
+  #       run: |
+  #         # Run tests on commits after the last merge commit and before the PR head commit
+  #         # Use clang++, because it is a bit faster and uses less memory than g++
+  #         git rebase --exec "echo Running test-one-commit on \$( git log -1 ) && CC=clang CXX=clang++ cmake -B build -DWERROR=ON -DWITH_ZMQ=ON -DBUILD_GUI=ON -DBUILD_BENCH=ON -DBUILD_FUZZ_BINARY=ON -DWITH_BDB=ON -DWITH_USDT=ON -DCMAKE_CXX_FLAGS='-Wno-error=unused-member-function' && cmake --build build -j $(nproc) && ctest --output-on-failure --stop-on-failure --test-dir build -j $(nproc) && ./build/test/functional/test_runner.py -j $(( $(nproc) * 2 )) --combinedlogslen=99999999" ${{ env.TEST_BASE }}
+  #
   # macos-native-arm64:
   #   name: ${{ matrix.job-name }}
   #   # Use any image to support the xcode-select below, but hardcode version to avoid silent upgrades (and breaks).
