--- a/ci/test/config/native-asan.env
+++ b/ci/test/config/native-asan.env
@@ -3,7 +3,7 @@ BITCOIN_CONFIG="-DWITH_USDT=ON -DWITH_ZMQ=ON -DWITH_BDB=ON -DWARN_INCOMPATIBLE_B
 CI_CONTAINER_CAP="--cap-add SYS_PTRACE"
 CI_IMAGE_NAME_TAG="mirror.gcr.io/ubuntu:24.04"
 CONTAINER_NAME="ci_native_asan"
-GOAL="install"
+GOAL="all"
 INSTALL_BCC_TRACING_TOOLS="false"
 NO_DEPENDS="1"
 PACKAGES="systemtap-sdt-dev clang-${APT_LLVM_V} llvm-${APT_LLVM_V} libclang-rt-${APT_LLVM_V}-dev python3-zmq qtbase5-dev qttools5-dev qttools5-dev-tools libevent-dev libboost-dev libdb5.3++-dev libzmq3-dev libqrencode-dev libsqlite3-dev"
