--- a/depends/toolchain.cmake.in
+++ b/depends/toolchain.cmake.in
@@ -86,6 +86,10 @@ set(CMAKE_OBJDUMP "@OBJDUMP@")
 set(CMAKE_FIND_USE_CMAKE_ENVIRONMENT_PATH OFF)
 
 set(CMAKE_FIND_ROOT_PATH "${CMAKE_CURRENT_LIST_DIR}")
+# Add depends directory to CMAKE_PREFIX_PATH only if not already present
+if(NOT "${CMAKE_CURRENT_LIST_DIR}" IN_LIST CMAKE_PREFIX_PATH)
+  list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_LIST_DIR}")
+endif()
 set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
 set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
 set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
