build: introduce USE_DEPENDS_RPATH option
Introduce USE_DEPENDS_RPATH CMake option (default OFF) to control
whether RPATH is used for runtime linking.

By default it maintains the current behaviour of skipping using RPATHs
(except on NetBSD), and When enabled sets RPATH to depends lib directory
(and disables RPATH skipping).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -635,8 +635,15 @@ endif()
 if(CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
   set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 else()
-  set(CMAKE_SKIP_BUILD_RPATH TRUE)
-  set(CMAKE_SKIP_INSTALL_RPATH TRUE)
+  # Option to include depends lib directory in RPATH for runtime linking
+  option(USE_DEPENDS_RPATH "Enable depends RPATH and disable RPATH skipping" OFF)
+  if(USE_DEPENDS_RPATH)
+    set(CMAKE_SKIP_BUILD_RPATH FALSE CACHE BOOL "")
+    set(CMAKE_SKIP_INSTALL_RPATH FALSE CACHE BOOL "")
+  else()
+    set(CMAKE_SKIP_BUILD_RPATH TRUE CACHE BOOL "")
+    set(CMAKE_SKIP_INSTALL_RPATH TRUE CACHE BOOL "")
+  endif()
 endif()
 add_subdirectory(test)
 add_subdirectory(doc)
