--- a/depends/toolchain.cmake.in
+++ b/depends/toolchain.cmake.in
@@ -90,6 +90,15 @@ set(CMAKE_FIND_ROOT_PATH "${CMAKE_CURRENT_LIST_DIR}")
 if(NOT "${CMAKE_CURRENT_LIST_DIR}" IN_LIST CMAKE_PREFIX_PATH)
   list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_LIST_DIR}")
 endif()
+
+# include depends lib directory in RPATH for runtime linking
+if(USE_DEPENDS_RPATH)
+  cmake_path(APPEND CMAKE_CURRENT_LIST_DIR "lib" OUTPUT_VARIABLE DEPENDS_LIB_DIR)
+  set(CMAKE_INSTALL_RPATH "${DEPENDS_LIB_DIR}")
+  set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+  set(DEPENDS_RPATH_SET TRUE CACHE INTERNAL "Indicate depends RPATH has been set")
+endif()
+
 set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
 set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
 set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
