build: add USE_DEPENDS_RPATH cmake cache variable
=== WIP ===

Include the depends lib/ directory in built binary RPATH.

This should be considered a deve-only option, which allows running e.g.
a depends-built bitcoin-qt binary on system like NixOS, where the
runtime dependencies cannot so easily be located in "standard" paths.

Despite this "fixing" the issue, I'm not happy as I don't fully
understand yet why NixOS struggles to find depends libs; was this just
something I never noticed on other systems as I always had the real lib
installed anyway? Is there another cause?

===========

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -635,8 +635,14 @@ endif()
 if(CMAKE_SYSTEM_NAME STREQUAL "NetBSD")
   set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 else()
-  set(CMAKE_SKIP_BUILD_RPATH TRUE)
-  set(CMAKE_SKIP_INSTALL_RPATH TRUE)
+  set(CMAKE_SKIP_BUILD_RPATH FALSE CACHE BOOL "")
+  set(CMAKE_SKIP_INSTALL_RPATH FALSE CACHE BOOL "")
+endif()
+# Option to include depends lib directory in RPATH for runtime linking
+option(USE_DEPENDS_RPATH "Enable depends RPATH and disable RPATH skipping" OFF)
+if(USE_DEPENDS_RPATH)
+  set(CMAKE_SKIP_BUILD_RPATH TRUE CACHE BOOL "")
+  set(CMAKE_SKIP_INSTALL_RPATH TRUE CACHE BOOL "")
 endif()
 add_subdirectory(test)
 add_subdirectory(doc)
