--- a/depends/toolchain.cmake.in
+++ b/depends/toolchain.cmake.in
@@ -86,6 +86,12 @@ set(CMAKE_OBJDUMP "@OBJDUMP@")
 set(CMAKE_FIND_USE_CMAKE_ENVIRONMENT_PATH OFF)
 
 set(CMAKE_FIND_ROOT_PATH "${CMAKE_CURRENT_LIST_DIR}")
+# include depends lib directory in RPATH for runtime linking
+if(USE_DEPENDS_RPATH)
+  cmake_path(APPEND CMAKE_CURRENT_LIST_DIR "lib" OUTPUT_VARIABLE DEPENDS_LIB_DIR)
+  set(CMAKE_INSTALL_RPATH "${DEPENDS_LIB_DIR}")
+  set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+endif()
 set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
 set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
 set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
