--- a/ruff.toml
+++ b/ruff.toml
@@ -6,7 +6,14 @@ extend-exclude = [
     "src/minisketch",
     "src/secp256k1",
 ]
+target-version = "py310"
 
 [lint]
 select = ["E4", "E7", "E9", "F", "W"]
 ignore = ["E741"]
+
+[format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
