--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -443,3 +443,19 @@ jobs:
           path: ${{ env.CCACHE_DIR }}
           # https://github.com/actions/cache/blob/main/tips-and-workarounds.md#update-a-cache
           key: ${{ github.job }}-ccache-${{ github.run_id }}
+  ruff:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install ruff
+        uses: astral-sh/ruff-action@v3
+        with:
+          version-file: "pyproject.toml"
+      - name: Lint
+        uses: astral-sh/ruff-action@v3
+        with:
+          args: "check --fix"
+      - name: Format
+        uses: astral-sh/ruff-action@v3
+        with:
+          args: "format --check --diff"
