--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  # Ensure the latest merged pull request state is used, even on re-runs.
+  YAML_KEY_01: &CHECKOUT_REF_TMPL ${{ github.event_name == 'pull_request' && github.ref || '' }}
+
   CI_FAILFAST_TEST_LEAVE_DANGLING: 1  # GHA does not care about dangling processes and setting this variable avoids killing the CI script itself on error
   CIRRUS_CACHE_HOST: http://127.0.0.1:12321/ # When using Cirrus Runners this host can be used by the docker `gha` build cache type.
   REPO_USE_CIRRUS_RUNNERS: 'bitcoin/bitcoin' # Use cirrus runners and cache for this repo, instead of falling back to the slow GHA runners
@@ -134,6 +137,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          ref: *CHECKOUT_REF_TMPL
 
       - name: Clang version
         run: |
@@ -201,6 +206,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          ref: *CHECKOUT_REF_TMPL
 
       - name: Configure Developer Command Prompt for Microsoft Visual C++
         # Using microsoft/setup-msbuild is not enough.
@@ -312,6 +319,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          ref: *CHECKOUT_REF_TMPL
 
       - name: Configure environment
         uses: ./.github/actions/configure-environment
@@ -353,6 +362,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          ref: *CHECKOUT_REF_TMPL
 
       - name: Download built executables
         uses: actions/download-artifact@v4
@@ -495,6 +506,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          ref: *CHECKOUT_REF_TMPL
 
       - name: Configure environment
         uses: ./.github/actions/configure-environment
@@ -537,6 +550,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
         with:
+          ref: *CHECKOUT_REF_TMPL
           fetch-depth: 0
 
       - name: Configure Docker
